--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,29 +1,32 @@
-<footer class="h-36 w-screen p-2 flex items-center bg-darkGray sm:px-6 absolute bottom-0">
-    <!-- Logo y nombre de la institucion -->
-    <div class="w-2/3 px-4 flex justify-center items-center sm:w-1/2 sm:justify-between">
-        <div class="text-white text-xs xs:text-lg sm:text-xl">
-            <h1>Yale School of Art</h1>
-            <h1>1156 Chapel Street, POB 208339</h1>
-            <h1>New Haven, Connecticut, 06520-8339</h1>
+<footer class="h-36 w-screen bg-darkGray">
+    <div class="h-full w-full flex">
+        <!-- Nombre y dirección de la institucion -->
+        <div class="w-2/3 flex items-center sm:pl-40 sm:w-1/2">
+            <div class="px-8 text-white text-xs sm:text-xl">
+                <h1>Yale School of Art</h1>
+                <h1>1156 Chapel Street, POB 208339</h1>
+                <h1>New Haven, Connecticut, 06520-8339</h1>
+            </div>
         </div>
-    </div>
+    
+        <!-- Contenedor de links -->
+        <div class="h-full w-1/3 flex flex-col grow gap-3 justify-center items-center font-semibold sm:w-1/2 sm:flex-row md:gap-16 lg:gap-20 lg:text-xl xl:text-2xl">
+            <a href="https://www.facebook.com/YaleSchoolofArt/" target="_blank">
+                <img class="w-5 h-5 sm:w-8 sm:h-8 lg:w-10 lg:h-10" src="../../assets/facebook.svg" alt="Facebook">
+            </a>
+    
+            <a href="https://www.instagram.com/yaleschoolofart/" target="_blank">
+                <img class="w-5 h-5 sm:w-8 sm:h-8 lg:w-10 lg:h-10" src="../../assets/instagram.svg" alt="Instagram">
+            </a>
+    
+            <a href="https://www.youtube.com/channel/UCDwJT0mYodTSodcpH-hGmdA" target="_blank">
+                <img class="w-5 h-5 sm:w-8 sm:h-8 lg:w-10 lg:h-10" src="../../assets/youtube.svg" alt="Youtube">
+            </a>
+            
+            <a href="#">
+                <img class="w-5 h-5 sm:w-8 sm:h-8 lg:w-10 lg:h-10" src="../../assets/mail.svg" alt="Correo">
+            </a>
+        </div>
 
-    <!-- Contenedor de links -->
-    <div class="h-full w-1/3 px-8 flex flex-col grow gap-4 items-end justify-end font-semibold sm:w-1/2 sm:px-14 sm:flex-row sm:items-center md:px-10 md:gap-16 lg:gap-20 lg:text-xl xl:text-2xl">
-        <a href="https://www.facebook.com/YaleSchoolofArt/" target="_blank">
-            <img class="w-5 h-5 sm:w-8 sm:h-8 lg:w-10 lg:h-10" src="../../assets/facebook.svg" alt="Facebook">
-        </a>
-
-        <a href="https://www.instagram.com/yaleschoolofart/" target="_blank">
-            <img class="w-5 h-5 sm:w-8 sm:h-8 lg:w-10 lg:h-10" src="../../assets/instagram.svg" alt="Instagram">
-        </a>
-
-        <a href="https://www.youtube.com/channel/UCDwJT0mYodTSodcpH-hGmdA" target="_blank">
-            <img class="w-5 h-5 sm:w-8 sm:h-8 lg:w-10 lg:h-10" src="../../assets/youtube.svg" alt="Youtube">
-        </a>
-        
-        <a href="#">
-            <img class="w-5 h-5 sm:w-8 sm:h-8 lg:w-10 lg:h-10" src="../../assets/mail.svg" alt="Correo">
-        </a>
     </div>
 </footer>
