--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="h-24 w-screen mb-32 p-2 fixed flex grow items-center bg-indigo drop-shadow-2xl sm:h-28 sm:px-6">
+<header class="h-24 w-screen mb-32 p-2 sticky top-0 flex grow items-center bg-indigo drop-shadow-2xl sm:h-28 sm:px-6">
     <!-- Logo y nombre de la institucion -->
     <div class="w-1/2 px-4 flex grow justify-between items-center">
         <div class="flex items-center">
@@ -16,7 +16,7 @@
         <a href="#" class="hover:text-darkYellow">Inicio</a>
         <a href="#" class="text-center hover:text-darkYellow">Sobre Nosotros</a>
         <a href="#" class="hover:text-darkYellow">Carreras</a>
-        <a href="#" class="hover:text-darkYellow">Galería</a>
+        <a href="#" class="hover:text-darkYellow">Foro</a>
         <a href="#" class="hover:text-darkYellow">Contacto</a>
     </div>
 </header>
