Avances en pestaña Inicio. Arreglo de errores en alineacion de elementos

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,7 +15,7 @@
     <div class="w-2/3 hidden px-14 justify-between items-center text-md text-white font-semibold lg:flex lg:text-lg xl:text-xl">
         <a href="#" class="hover:text-darkYellow">Inicio</a>
         <a href="#" class="text-center hover:text-darkYellow">Sobre Nosotros</a>
-        <a href="#" class="hover:text-darkYellow">Carreras</a>
+        <a href="#carreras" class="hover:text-darkYellow">Carreras</a>
         <a href="#" class="hover:text-darkYellow">Foro</a>
         <a href="#" class="hover:text-darkYellow">Contacto</a>
     </div>
