--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,61 +1,59 @@
 <body class="min-h-screen bg-background">    
-    <header class="z-50 h-24 w-screen px-4 sticky top-0 flex grow items-center bg-indigo drop-shadow-2xl sm:h-28">
+    <header class="z-50 h-24 w-screen px-4 sticky top-0 flex grow items-center bg-indigo drop-shadow-2xl sm:h-28 lg:px-0">
         <!-- Logo y nombre de la institucion -->
-        <div class="w-1/3 px-4 flex grow justify-between items-center">
-            <div class="flex items-center">
-                <a href="" class="hidden w-1/3 sm:flex">
+        <div class="w-1/3 px-5 flex grow justify-between items-center sm:px-10 lg:px-6 xl:px-10">
+            <div class="flex items-center xl:gap-5">
+                <a href="" class="hidden w-1/3 lg:flex lg:justify-center">
                     <img draggable="false" class="h-16 w-18 xl:h-20" src="../../assets/Yale_School_of_Art_Logo.png" alt="Logo">
                 </a>
-                <a class="w-2/3 max-w-[200px] text-2xl text-white font-bold sm:ml-6 sm:text-2xl sm:max-w-[250px] md:text-3xl xl:max-w-full xl:text-4xl" href="">Yale School of Art</a>
+                <a class="w-2/3 max-w-[200px] text-xl text-white font-bold sm:text-2xl sm:max-w-[250px] md:text-3xl xl:max-w-full xl:text-4xl" href="">Yale School of Art</a>
             </div>
-            <img class="h-6 w-6 md:mr-4 lg:hidden active:animate-shrink" src="../../assets/hamburger.svg" alt="Menu" *ngIf="!menuMovil" (click)="menuMovil = !menuMovil">
-            <img class="h-6 w-6 md:mr-4 lg:hidden active:animate-shrink" src="../../assets/x-close.svg" alt="Menu" *ngIf="menuMovil" (click)="menuMovil = !menuMovil">
+            <img class="h-6 w-6 md:mr-4 xl:hidden active:animate-shrink" src="../../assets/hamburger.svg" alt="Menu" *ngIf="!menuMovil" (click)="menuMovil = !menuMovil">
+            <img class="h-6 w-6 md:mr-4 xl:hidden active:animate-shrink" src="../../assets/x-close.svg" alt="Menu" *ngIf="menuMovil" (click)="menuMovil = !menuMovil">
         </div>
     
     
         <!-- Contenedor de links -->
-        <div class="w-2/3 hidden px-44 gap-20 justify-end items-center text-lg text-white font-semibold xl:text-2xl lg:flex">
+        <div class="w-2/3 hidden px-40 gap-16 justify-end items-center text-lg text-white font-semibold xl:text-xl xl:flex">
             <a href="" class="hover:text-darkYellow">Inicio</a>
             <a href="#" class="text-center hover:text-darkYellow">Sobre Nosotros</a>
-            <a href="#" class="hover:text-darkYellow">Carreras</a>
+            <a href="#carreras" class="hover:text-darkYellow">Carreras</a>
             <a href="#" class="hover:text-darkYellow">Foro</a>
             <a href="#" class="hover:text-darkYellow">Contacto</a>
         </div>
-
-
     </header>
     
     
     <!-- Contenido -->
     <div class="h-full w-screen">
         <!-- Menu de navegacion mobil -->
-        <div class="w-full h-full flex flex-col gap-12 justify-center text-center text-xl text-white font-bold fixed bottom-0 bg-indigo/80 lg:hidden" *ngIf="menuMovil">
+        <div class="w-full h-full flex flex-col gap-12 justify-center text-center text-xl text-white font-bold fixed z-20 bottom-0 bg-indigo/80" *ngIf="menuMovil">
             <a href="" class="active:text-darkYellow">Inicio</a>
             <a href="#" class="active:text-darkYellow">Sobre Nosotros</a>
-            <a href="#" class="active:text-darkYellow">Carreras</a>
+            <a href="#carreras" class="active:text-darkYellow">Carreras</a>
             <a href="#" class="active:text-darkYellow">Galería</a>
             <a href="#" class="active:text-darkYellow">Contacto</a>
         </div>
         
         <!-- Noticias -->
-        <div class="h-[160px] w-screen py-4 flex sm:px-16 xl:h-72">
-            <button class="flex justify-center items-center active:animate-shrink active:text-xl" (click)="slideBack(); resetTimer()"> 
-                <img class="w-4 mx-2 sm:w-10 sm:mx-12" src="../../assets/chevron-left.svg" alt="&lt;">
+        <div class="h-[160px] w-screen px-2 py-4 flex sm:px-16 md:px-4 md:gap-4 lg:px-10 lg:gap-16 xl:h-60 xl:gap-14 xl:px-24">
+            <button class="w-8 flex justify-center items-center active:animate-shrink active:text-xl" (click)="slideBack(); resetTimer()"> 
+                <img class="w-4" src="../../assets/chevron-left.svg" alt="&lt;">
             </button>
             <!-- Contenedor de imagenes -->
-            <div class="w-full h-full flex justify-center gap-4 sm:justify-between">
-                <img draggable="false" class="w-[250px] h-full swiper-img md:w-[320px] xl:w-4/12" src="../../assets/noticia.jpg" alt="Noticia">
+            <div class="w-full h-full flex justify-center sm:justify-between md:gap-12">
+                <img draggable="false" class="w-[250px] h-full swiper-img md:w-[320px] md:mx-0 xl:w-4/12" src="../../assets/noticia.jpg" alt="Noticia">
                 <img draggable="false" class="hidden h-full w-[320px] swiper-img md:block xl:w-4/12" src="../../assets/noticia_2.jpg" alt="Noticia">
                 <img draggable="false" class="hidden h-full w-4/12 swiper-img xl:block" src="../../assets/noticia_3.jpg" alt="Noticia">
             </div>
-            <button class="flex justify-center items-center active:animate-shrink active:text-xl" (click)="slideBack(); resetTimer()"> 
-                <img class="w-4 mx-2 sm:w-10 sm:mx-12" src="../../assets/chevron-right.svg" alt="&lt;">
+            <button class="w-8 flex justify-center items-center active:animate-shrink active:text-xl" (click)="slideBack(); resetTimer()"> 
+                <img class="w-4" src="../../assets/chevron-right.svg" alt="&lt;">
             </button>
         </div>
         
         
         <!-- Eventos -->
-        <div class="py-8 px-9 sm:px-[11.5rem]">
+        <div class="py-8 px-9 sm:px-20 md:px-16 lg:px-32 xl:px-[11.5rem]">
             <h1 class="text-2xl font-bold text-savoyBlue sm:text-4xl">Proximos Eventos</h1>
             <div class="w-full h-[2px] bg-savoyBlue my-4"></div>
             
@@ -100,9 +98,44 @@
             </div>
         </div>     
         
+        
+        <!-- Carreras -->
+        <div class="px-8 pb-6 sm:px-20 md:px-16 md:py-6 lg:px-32 xl:pb-16 xl:px-[11.5rem]" id="carreras">
+            <h1 class="text-2xl py-4 font-bold text-savoyBlue sm:text-4xl">Carreras</h1>
+        
+            <!-- Contenedor Carreras -->
+            <div class="flex flex-col gap-2 flex-wrap text-xl text-center text-white font-bold md:text-3xl lg:flex-row">
+                <!-- Carrera -->
+                <div class="w-full h-40 flex grow items-center bg-[url('assets/diseño_grafico.jpg')] bg-cover bg-center relative transition-all hover:text-darkYellow lg:w-1/3 lg:h-80 md:hover:text-4xl ">
+                    <div class="w-full h-full flex items-center bg-black/50 absolute top-0 left-0 hover:bg-black/70">
+                        <h1 class="w-full">Diseño Grafico</h1>
+                    </div>
+                </div>
+        
+                <!-- Carrera -->
+                <div class="w-full h-40 flex grow items-center bg-[url('assets/pintura.jpg')] bg-cover bg-center relative transition-all hover:text-darkYellow lg:w-1/3 lg:h-80 md:hover:text-4xl ">
+                    <div class="w-full h-full flex items-center bg-black/50 absolute top-0 left-0 hover:bg-black/70">
+                        <h1 class="w-full">Pintura</h1>
+                    </div>
+                </div>
+        
+                <!-- Carrera -->
+                <div class="w-full h-40 flex grow items-center bg-[url('assets/fotografia.jpg')] bg-cover bg-center relative transition-all hover:text-darkYellow lg:w-1/3 lg:h-80 md:hover:text-4xl ">
+                    <div class="w-full h-full flex items-center bg-black/50 absolute top-0 left-0 hover:bg-black/70">
+                        <h1 class="w-full">Fotografía</h1>
+                    </div>
+                </div>
+        
+                <!-- Carrera -->
+                <div class="w-full h-40 flex grow items-center bg-[url('assets/escultura.jpg')] bg-cover bg-center relative transition-all hover:text-darkYellow lg:w-1/3 lg:h-80 md:hover:text-4xl ">
+                    <div class="w-full h-full flex items-center bg-black/50 absolute top-0 left-0 hover:bg-black/70">
+                        <h1 class="w-full">Escultura</h1>
+                    </div>
+                </div>
+            </div>
+        </div>     
     </div>
     
     <app-footer></app-footer>
 </body>
-
 
