--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -14,7 +14,7 @@
     
     
         <!-- Contenedor de links -->
-        <div class="w-2/3 hidden px-40 gap-16 justify-end items-center text-lg text-white font-semibold xl:text-xl xl:flex">
+        <div class="w-2/3 hidden px-40 gap-16 justify-end items-center text-lg text-white font-semibold xl:text-xl xl:flex xl:px-48 xl:gap-24" >
             <a href="" class="hover:text-darkYellow">Inicio</a>
             <a href="#" class="text-center hover:text-darkYellow">Sobre Nosotros</a>
             <a href="#carreras" class="hover:text-darkYellow">Carreras</a>
@@ -36,14 +36,14 @@
         </div>
         
         <!-- Noticias -->
-        <div class="h-[160px] w-screen px-2 py-4 flex sm:px-16 md:px-4 md:gap-4 lg:px-10 lg:gap-16 xl:h-60 xl:gap-14 xl:px-24">
+        <div class="h-[160px] w-screen px-2 py-4 mt-4 flex sm:px-16 md:px-4 md:gap-4 lg:px-10 lg:gap-2 lg:h-[200px] xl:h-64 xl:gap-14 xl:px-24">
             <button class="w-8 flex justify-center items-center active:animate-shrink active:text-xl" (click)="slideBack(); resetTimer()"> 
                 <img class="w-4" src="../../assets/chevron-left.svg" alt="&lt;">
             </button>
             <!-- Contenedor de imagenes -->
-            <div class="w-full h-full flex justify-center sm:justify-between md:gap-12">
-                <img draggable="false" class="w-[250px] h-full swiper-img md:w-[320px] md:mx-0 xl:w-4/12" src="../../assets/noticia.jpg" alt="Noticia">
-                <img draggable="false" class="hidden h-full w-[320px] swiper-img md:block xl:w-4/12" src="../../assets/noticia_2.jpg" alt="Noticia">
+            <div class="w-full h-full flex justify-center sm:justify-between md:gap-10 lg:justify-center lg:gap-12 xl:justify-between xl:gap-4">
+                <img draggable="false" class="w-[250px] h-full swiper-img md:w-[320px] md:mx-0 lg:w-[360px] xl:w-4/12" src="../../assets/noticia.jpg" alt="Noticia">
+                <img draggable="false" class="hidden h-full w-[320px] swiper-img md:block lg:w-[360px] xl:w-4/12" src="../../assets/noticia_2.jpg" alt="Noticia">
                 <img draggable="false" class="hidden h-full w-4/12 swiper-img xl:block" src="../../assets/noticia_3.jpg" alt="Noticia">
             </div>
             <button class="w-8 flex justify-center items-center active:animate-shrink active:text-xl" (click)="slideBack(); resetTimer()"> 
@@ -58,15 +58,14 @@
             <div class="w-full h-[2px] bg-savoyBlue my-4"></div>
             
             <!-- Contenedor de Eventos -->
-            <div class="w-full h-full flex flex-col justify-between gap-4 sm:flex-row">
-                
+            <div class="w-full h-full flex flex-col justify-between gap-4 sm:flex-row lg:gap-4 xl:gap-4">                
                 <!-- Evento -->
                 <div class="h-20 w-full flex sm:w-1/3 sm:min-h-[105px]">
                     <div class="w-1/4 bg-white text-xl text-indigo font-bold flex flex-col items-center sm:max-w-[92px] sm:w-1/4 sm:text-2xl">
                         <h1 class="h-2/3 w-full flex items-center justify-center font-bold text-2xl">25</h1>
                         <h1 class="h-1/3 w-full flex items-center justify-center bg-darkYellow">Nov</h1>
                     </div>
-                    <div class="w-3/4 max-w-[380px] pl-4 flex flex-col gap-0 text-md sm:w-full sm:text-xl">
+                    <div class="w-3/4 max-w-[380px] pl-4 flex flex-col gap-0 text-md sm:w-full sm:text-xl lg:text-lg xl:text-xl">
                         <h1 class="h-2/3 w-full flex items-center font-bold">Festival Universitario de las Artes</h1>
                         <h1 class="h-1/3 w-full flex items-center font-semibold">16:30</h1>
                     </div>
@@ -78,9 +77,9 @@
                         <h1 class="h-2/3 w-full flex items-center justify-center font-bold text-2xl">27</h1>
                         <h1 class="h-1/3 w-full flex items-center justify-center bg-darkYellow">Nov</h1>
                     </div>
-                    <div class="w-3/4 max-w-[380px] pl-4 flex flex-col gap-0 text-md sm:w-full sm:text-xl">
-                        <h1 class="h-2/3 w-full flex items-center font-bold">Alebrijes Iluminados</h1>
-                        <h1 class="h-1/3 w-full flex items-center font-semibold">20:30</h1>
+                    <div class="w-3/4 max-w-[380px] pl-4 flex flex-col gap-0 text-md sm:w-full sm:text-xl lg:text-lg xl:text-xl">
+                        <h1 class="h-2/3 w-full flex items-center font-bold">Curso de Pintura para principiantes</h1>
+                        <h1 class="h-1/3 w-full flex items-center font-semibold">17:30</h1>
                     </div>
                 </div>
                 
@@ -90,9 +89,9 @@
                         <h1 class="h-2/3 w-full flex items-center justify-center font-bold text-2xl">30</h1>
                         <h1 class="h-1/3 w-full flex items-center justify-center bg-darkYellow">Nov</h1>
                     </div>
-                    <div class="w-3/4 max-w-[380px] pl-4 flex flex-col gap-0 text-md sm:w-full sm:text-xl">
-                        <h1 class="h-2/3 w-full flex items-center font-bold">El Arte para Compartir</h1>
-                        <h1 class="h-1/3 w-full flex items-center font-semibold">17:30</h1>
+                    <div class="w-3/4 max-w-[380px] pl-4 flex flex-col gap-0 text-md sm:w-full sm:text-xl lg:text-lg xl:text-xl">
+                        <h1 class="h-2/3 w-full flex items-center font-bold">Exposicion de Arte</h1>
+                        <h1 class="h-1/3 w-full flex items-center font-semibold">12:00</h1>
                     </div>
                 </div>
             </div>
