Paginas informativas terminadas. Pendiente revisar detalles en diseño

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,8 +4,13 @@
 
 * {
   scroll-behavior: smooth;
-  user-select: none;
-  max-width: 100%;
+}
+
+html, body {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
 }
 
 button {
