--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -10,21 +10,21 @@
         </div>
     
         <!-- Contenedor de links -->
-        <div class="h-full w-1/3 flex flex-col grow gap-3 justify-center items-center font-semibold sm:w-1/2 sm:flex-row md:gap-10 lg:pr-8 lg:text-xl xl:pr-0 xl:gap-28 xl:text-2xl">
+        <div class="select-none h-full w-1/3 flex flex-col grow gap-3 justify-center items-center font-semibold sm:w-1/2 sm:flex-row md:gap-10 lg:pr-8 lg:text-xl xl:pr-0 xl:gap-28 xl:text-2xl">
             <a href="https://www.facebook.com/YaleSchoolofArt/" target="_blank">
-                <img class="w-5 h-5 sm:w-8 sm:h-8 lg:w-10 lg:h-10" src="../../assets/facebook.svg" alt="Facebook">
+                <img class="w-5 h-5 sm:w-8 sm:h-8 lg:w-10 lg:h-10" src="../../assets/facebook.svg" alt="Facebook" draggable="false">
             </a>
     
             <a href="https://www.instagram.com/yaleschoolofart/" target="_blank">
-                <img class="w-5 h-5 sm:w-8 sm:h-8 lg:w-10 lg:h-10" src="../../assets/instagram.svg" alt="Instagram">
+                <img class="w-5 h-5 sm:w-8 sm:h-8 lg:w-10 lg:h-10" src="../../assets/instagram.svg" alt="Instagram" draggable="false">
             </a>
     
             <a href="https://www.youtube.com/channel/UCDwJT0mYodTSodcpH-hGmdA" target="_blank">
-                <img class="w-5 h-5 sm:w-8 sm:h-8 lg:w-10 lg:h-10" src="../../assets/youtube.svg" alt="Youtube">
+                <img class="w-5 h-5 sm:w-8 sm:h-8 lg:w-10 lg:h-10" src="../../assets/youtube.svg" alt="Youtube" draggable="false">
             </a>
             
             <a href="#">
-                <img class="w-5 h-5 sm:w-8 sm:h-8 lg:w-10 lg:h-10" src="../../assets/mail.svg" alt="Correo">
+                <img class="w-5 h-5 sm:w-8 sm:h-8 lg:w-10 lg:h-10" src="../../assets/mail.svg" alt="Correo" draggable="false">
             </a>
         </div>
 
