--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,6 +1,6 @@
 <body class="min-h-screen bg-background">
     <!-- Header -->
-    <header class="z-50 h-20 w-screen px-4 sticky top-0 flex grow items-center bg-indigo drop-shadow-2xl sm:h-28 lg:px-0">
+    <header class="z-50 h-20 w-screen px-4 sticky top-0 flex grow items-center bg-indigo drop-shadow-2xl sm:h-32 lg:px-0">
         <!-- Logo y nombre de la institucion -->
         <div class="w-1/3 px-5 flex grow justify-between items-center sm:px-10 lg:px-6 xl:px-10">
             <div class="flex items-center xl:gap-5">
@@ -17,23 +17,23 @@
         <!-- Contenedor de links -->
         <div class="w-2/3 hidden px-40 gap-16 justify-end items-center text-lg text-white font-semibold xl:text-xl xl:flex xl:px-48 xl:gap-24" >
             <a href="" class="hover:text-darkYellow">Inicio</a>
-            <a href="" class="text-center hover:text-darkYellow">Sobre Nosotros</a>
+            <a href="about" class="text-center hover:text-darkYellow">Sobre Nosotros</a>
             <a href="#carreras" class="hover:text-darkYellow">Carreras</a>
-            <a href="" class="hover:text-darkYellow">Foro</a>
-            <a href="" class="hover:text-darkYellow">Contacto</a>
+            <a href="foro" class="hover:text-darkYellow">Foro</a>
+            <a href="contacto" class="hover:text-darkYellow">Contacto</a>
         </div>
     </header>
     
     
     <!-- Contenido -->
-    <div class="h-full w-screen">
+    <div class="h-full">
         <!-- Menu de navegacion mobil -->
-        <div class="w-full h-full flex flex-col gap-12 justify-center text-center text-xl text-white font-bold fixed z-20 bottom-0 bg-indigo/80" *ngIf="menuMovil">
-            <a href="" class="active:text-darkYellow">Inicio</a>
-            <a href="#" class="active:text-darkYellow">Sobre Nosotros</a>
-            <a href="#carreras" class="active:text-darkYellow">Carreras</a>
-            <a href="#" class="active:text-darkYellow">Galería</a>
-            <a href="#" class="active:text-darkYellow">Contacto</a>
+        <div class="w-full h-full flex flex-col gap-12 justify-center text-center text-xl text-white font-bold fixed z-20 bottom-0 bg-indigo/80" *ngIf="menuMovil" >
+            <a href="" class="active:text-darkYellow" (click)="cerrarMenuMovil()">Inicio</a>
+            <a href="about" class="active:text-darkYellow" (click)="cerrarMenuMovil()">Sobre Nosotros</a>
+            <a href="#carreras" class="active:text-darkYellow" (click)="cerrarMenuMovil()">Carreras</a>
+            <a href="foro" class="active:text-darkYellow" (click)="cerrarMenuMovil()">Foro</a>
+            <a href="contacto" class="active:text-darkYellow" (click)="cerrarMenuMovil()">Contacto</a>
         </div>
         
         <!-- Noticias -->
@@ -45,7 +45,7 @@
             <div class="w-full h-full flex justify-center sm:justify-between md:gap-4 lg:justify-center lg:gap-12 xl:justify-between xl:gap-4">
                 <!-- Noticia -->
                 <div class="swiper-img w-[250px] h-full md:w-[320px] md:mx-0 lg:w-[360px] xl:w-4/12">
-                    <img draggable="false" class="w-full h-[160px] mb-4 lg:h-[200px] xl:h-64" src="../../assets/noticia.jpg" alt="Noticia">
+                    <img draggable="false" class="w-full h-[160px] mb-4 lg:h-[200px] xl:h-64" src="../../assets/noticia_1.jpg" alt="Noticia">
                     <h1 class="text-base font-semibold md:text-xl">Visita la galeria de Arte ubicada dentro de la Universidad</h1>
                 </div>
                 
@@ -114,34 +114,34 @@
         
         
         <!-- Carreras -->
-        <div class="px-8 pb-6 sm:px-20 md:px-16 md:py-6 lg:px-32 xl:pb-16 xl:px-[11.5rem]" id="carreras">
+        <div class="px-8 mt-8 pb-6 sm:mt-0 sm:px-20 md:px-16 md:py-6 lg:px-32 xl:pb-16 xl:px-[11.5rem]" id="carreras">
             <h1 class="text-2xl py-4 font-bold text-savoyBlue sm:text-4xl">Carreras</h1>
         
             <!-- Contenedor Carreras -->
             <div class="flex flex-col gap-2 flex-wrap text-xl text-center text-white font-bold md:text-3xl lg:flex-row">
                 <!-- Carrera -->
-                <div class="w-full h-40 flex grow items-center bg-[url('assets/diseño_grafico.jpg')] bg-cover bg-center relative transition-all hover:text-darkYellow lg:w-1/3 lg:h-80 md:hover:text-4xl ">
+                <div class="w-full h-40 flex grow items-center bg-[url('assets/diseño_grafico.jpg')] bg-cover bg-center relative transition-all hover:text-darkYellow lg:w-1/3 lg:h-80 md:hover:text-4xl" routerLink="diseño-grafico">
                     <div class="w-full h-full flex items-center bg-black/50 absolute top-0 left-0 hover:bg-black/70">
                         <h1 class="w-full">Diseño Grafico</h1>
                     </div>
                 </div>
         
                 <!-- Carrera -->
-                <div class="w-full h-40 flex grow items-center bg-[url('assets/pintura.jpg')] bg-cover bg-center relative transition-all hover:text-darkYellow lg:w-1/3 lg:h-80 md:hover:text-4xl ">
+                <div class="w-full h-40 flex grow items-center bg-[url('assets/pintura.jpg')] bg-cover bg-center relative transition-all hover:text-darkYellow lg:w-1/3 lg:h-80 md:hover:text-4xl" routerLink="pintura">
                     <div class="w-full h-full flex items-center bg-black/50 absolute top-0 left-0 hover:bg-black/70">
                         <h1 class="w-full">Pintura</h1>
                     </div>
                 </div>
         
                 <!-- Carrera -->
-                <div class="w-full h-40 flex grow items-center bg-[url('assets/fotografia.jpg')] bg-cover bg-center relative transition-all hover:text-darkYellow lg:w-1/3 lg:h-80 md:hover:text-4xl ">
+                <div class="w-full h-40 flex grow items-center bg-[url('assets/fotografia.jpg')] bg-cover bg-center relative transition-all hover:text-darkYellow lg:w-1/3 lg:h-80 md:hover:text-4xl" routerLink="fotografia">
                     <div class="w-full h-full flex items-center bg-black/50 absolute top-0 left-0 hover:bg-black/70">
                         <h1 class="w-full">Fotografía</h1>
                     </div>
                 </div>
         
                 <!-- Carrera -->
-                <div class="w-full h-40 flex grow items-center bg-[url('assets/escultura.jpg')] bg-cover bg-center relative transition-all hover:text-darkYellow lg:w-1/3 lg:h-80 md:hover:text-4xl ">
+                <div class="w-full h-40 flex grow items-center bg-[url('assets/escultura.jpg')] bg-cover bg-center relative transition-all hover:text-darkYellow lg:w-1/3 lg:h-80 md:hover:text-4xl" routerLink="escultura">
                     <div class="w-full h-full flex items-center bg-black/50 absolute top-0 left-0 hover:bg-black/70">
                         <h1 class="w-full">Escultura</h1>
                     </div>
@@ -159,7 +159,7 @@
                 <!-- Persona -->
                 <div class="w-full flex items-center md:text-center md:justify-center md:w-1/3 md:pr-4 md:flex-col lg:w-1/4 xl:w-1/6 xl:mr-16 xl:items-center xl:text-center">
                     <img class="w-1/3 mr-6 rounded-full mb-4 md:w-3/4 md:mr-0" src="../../assets/estudiante_1.jpg" alt="Estudiante" draggable="false">
-                    <div class="w-2/3 flex flex-col">
+                    <div class="w-2/3 flex flex-col pb-6 sm:pb-0">
                         <h1 class="text-base font-bold sm:text-xl">Adriana Silva</h1>
                         <h1 class="text-sm text-davysGray/50 sm:text-base">Estudiante de Diseño Gráfico</h1>
                     </div>
@@ -175,11 +175,11 @@
             </div>
             
             <!-- Testimonio -->
-            <div class="w-full flex flex-col mt-2 mb-12 md:flex-row">
+            <div class="w-full flex flex-col mt-2 mb-12 md:mb-0 md:flex-row">
                 <!-- Persona -->
                 <div class="w-full flex items-center md:text-center md:justify-center md:w-1/3 md:pr-4 md:flex-col lg:w-1/4 xl:w-1/6 xl:mr-16 xl:items-center xl:text-center">
                     <img class="w-1/3 mr-6 rounded-full mb-4 md:w-3/4 md:mr-0" src="../../assets/estudiante_2.jpg" alt="Estudiante" draggable="false">
-                    <div class="w-2/3 flex flex-col">
+                    <div class="w-2/3 flex flex-col pb-6 md:pb-0">
                         <h1 class="text-base font-bold sm:text-xl">Daniel Ortega</h1>
                         <h1 class="text-sm text-davysGray/50 sm:text-base">Estudiante de Escultura</h1>
                     </div>
@@ -197,4 +197,3 @@
     
     <app-footer></app-footer>
 </body>
-
