Paginas informativas terminadas. Se agrego hosting

--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -45,19 +45,19 @@
             <div class="w-full h-full flex justify-center sm:justify-between md:gap-4 lg:justify-center lg:gap-12 xl:justify-between xl:gap-4">
                 <!-- Noticia -->
                 <div class="swiper-img w-[250px] h-full md:w-[320px] md:mx-0 lg:w-[360px] xl:w-4/12">
-                    <img draggable="false" class="w-full h-[160px] mb-4 lg:h-[200px] xl:h-64" src="../../assets/noticia_1.jpg" alt="Noticia">
+                    <img draggable="false" class="w-full h-[160px] mb-4 lg:h-[200px] xl:h-64" src="https://firebasestorage.googleapis.com/v0/b/yale-school-of-art.appspot.com/o/noticias%2Fnoticia_1.jpg?alt=media&token=c2e08142-77e5-426d-a457-b291740a7d49" alt="Noticia">
                     <h1 class="text-base font-semibold md:text-xl">Visita la galeria de Arte ubicada dentro de la Universidad</h1>
                 </div>
                 
                 <!-- Noticia -->
                 <div class="swiper-img hidden h-full w-[320px] md:block lg:w-[360px] xl:w-4/12">
-                    <img draggable="false" class="w-full h-[160px] mb-4 lg:h-[200px] xl:h-64" src="../../assets/noticia_2.jpg" alt="Noticia">
+                    <img draggable="false" class="w-full h-[160px] mb-4 lg:h-[200px] xl:h-64" src="https://firebasestorage.googleapis.com/v0/b/yale-school-of-art.appspot.com/o/noticias%2Fnoticia_2.jpg?alt=media&token=b2bcf7a9-e77c-460e-b57f-cc082a027e4a" alt="Noticia">
                     <h1 class="text-base font-semibold md:text-xl">Te invitamos a la conferencia de Arte Moderno con Alejandro Vargas</h1>
                 </div>
                 
                 <!-- Noticia -->
                 <div class="swiper-img hidden h-full w-4/12 xl:block">
-                    <img draggable="false" class="w-full mb-4 lg:h-[200px] xl:h-64" src="../../assets/noticia_3.jpg" alt="Noticia">
+                    <img draggable="false" class="w-full mb-4 lg:h-[200px] xl:h-64" src="https://firebasestorage.googleapis.com/v0/b/yale-school-of-art.appspot.com/o/noticias%2Fnoticia_3.jpg?alt=media&token=f0f9d8a1-2249-4ded-a5d5-2fd968bb6608" alt="Noticia">
                     <h1 class="text-base font-semibold md:text-xl">Publica tus obras en el foro oficial para compartir tu arte</h1>
                 </div>
             </div>
