Se agrego pagina de Contacto

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -23,7 +23,7 @@
                 <img class="w-5 h-5 sm:w-8 sm:h-8 lg:w-10 lg:h-10" src="../../assets/youtube.svg" alt="Youtube" draggable="false">
             </a>
             
-            <a href="#">
+            <a href="/contacto">
                 <img class="w-5 h-5 sm:w-8 sm:h-8 lg:w-10 lg:h-10" src="../../assets/mail.svg" alt="Correo" draggable="false">
             </a>
         </div>
