Arreglo en tamaño de noticias para version movil

--- a/src/app/contacto/contacto.component.html
+++ b/src/app/contacto/contacto.component.html
@@ -43,7 +43,8 @@
             <!-- Contacto -->
             <div>
                 <h1 class="text-lg pb-2 font-bold text-savoyBlue sm:text-2xl md:pt-4">Registro y Admisión</h1>
-                <div class="p-4 flex flex-col items-center bg-indigo/50 rounded-bl-3xl rounded-tr-3xl md:items-start md:pl-10 md:p-8">
+                <div class="p-4 flex flex-col items-center bg-indigo/70 rounded-bl-3xl rounded-tr-3xl md:items-start md:pl-10 md:p-8">
+                    <p class="text-sm text-white mb-2 md:mb-4 md:text-lg xl:text-xl">203-432-2600</p>
                     <a class="text-sm text-white underline mb-2 md:mb-4 md:text-lg xl:text-xl" href="mailto:art.admissions@yale.edu">art.admissions@yale.edu</a>
                     <a class="text-sm text-white underline mb-2 md:text-lg xl:text-xl" href="mailto:artschool.info@yale.edu">artschool.info@yale.edu</a>
                 </div>
@@ -52,7 +53,7 @@
             <!-- Contacto -->
             <div class="my-4">
                 <h1 class="text-lg pb-2 font-bold text-savoyBlue sm:text-2xl md:pt-4">Apoyo Financiero</h1>
-                <div class="p-4 flex flex-col items-center bg-indigo/50 rounded-bl-3xl rounded-tr-3xl md:items-start md:pl-10 md:p-8">
+                <div class="p-4 flex flex-col items-center bg-indigo/70 rounded-bl-3xl rounded-tr-3xl md:items-start md:pl-10 md:p-8">
                     <a class="text-sm text-white underline mb-2 md:text-lg xl:text-xl" href="mailto:nicole.archer@yale.edu">nicole.archer@yale.edu</a>
                 </div>
             </div>
@@ -60,7 +61,8 @@
             <!-- Contacto -->
             <div class="my-4">
                 <h1 class="text-lg pb-2 font-bold text-savoyBlue sm:text-2xl md:pt-4">Oficina de Tecnología Digital</h1>
-                <div class="p-4 flex flex-col items-center bg-indigo/50 rounded-bl-3xl rounded-tr-3xl md:items-start md:pl-10 md:p-8">
+                <div class="p-4 flex flex-col items-center bg-indigo/70 rounded-bl-3xl rounded-tr-3xl md:items-start md:pl-10 md:p-8">
+                    <p class="text-sm text-white mb-2 md:mb-4 md:text-lg xl:text-xl">203-432-9120</p>
                     <a class="text-sm text-white underline mb-2 md:text-lg xl:text-xl" href="mailto:art.help@yale.edu">art.help@yale.edu</a>
                 </div>
             </div>
@@ -68,7 +70,7 @@
             <!-- Contacto -->
             <div class="my-4">
                 <h1 class="text-lg pb-2 font-bold text-savoyBlue sm:text-2xl md:pt-4">Donaciones y Regalos</h1>
-                <div class="p-4 flex flex-col items-center bg-indigo/50 rounded-bl-3xl rounded-tr-3xl md:items-start md:pl-10 md:p-8">
+                <div class="p-4 flex flex-col items-center bg-indigo/70 rounded-bl-3xl rounded-tr-3xl md:items-start md:pl-10 md:p-8">
                     <a class="text-sm text-white underline mb-2 md:text-lg xl:text-xl" href="mailto:nicole.freeman@yale.edu">nicole.freeman@yale.edu</a>
                 </div>
             </div>
@@ -76,7 +78,7 @@
             <!-- Contacto -->
             <div class="my-4">
                 <h1 class="text-lg pb-2 font-bold text-savoyBlue sm:text-2xl md:pt-4">Redes Sociales</h1>
-                <div class="p-4 flex flex-col items-center bg-indigo/50 rounded-bl-3xl rounded-tr-3xl md:items-start md:pl-10 md:p-8">
+                <div class="p-4 flex flex-col items-center bg-indigo/70 rounded-bl-3xl rounded-tr-3xl md:items-start md:pl-10 md:p-8">
                     <a class="text-sm text-white underline mb-2 md:mb-4 md:text-lg xl:text-xl" href="https://www.facebook.com/YaleSchoolofArt/" target="_blank">Buscanos en Facebook</a>
                     <a class="text-sm text-white underline mb-2 md:mb-4 md:text-lg xl:text-xl" href="https://www.instagram.com/yaleschoolofart/" target="_blank">Síguenos en Instagram</a>
                     <a class="text-sm text-white underline mb-2 md:text-lg xl:text-xl" href="https://www.youtube.com/channel/UCDwJT0mYodTSodcpH-hGmdA" target="_blank">Suscríbete en Youtube</a>
