--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -42,11 +42,11 @@
                 <img class="w-4" src="../../assets/chevron-left.svg" alt="&lt;">
             </button>
             <!-- Contenedor de Noticias -->
-            <div class="w-full h-full flex justify-center sm:justify-between md:gap-4 lg:justify-center lg:gap-12 xl:justify-between xl:gap-4">
+            <div class="w-full flex sm:justify-between md:gap-4 lg:justify-center lg:gap-12 xl:justify-between xl:gap-4">
                 <!-- Noticia -->
-                <div class="swiper-img w-[250px] h-full md:w-[320px] md:mx-0 lg:w-[360px] xl:w-4/12 animate-fade">
+                <div class="swiper-img w-full h-full md:w-[320px] md:mx-0 lg:w-[360px] xl:w-4/12 animate-fade">
                     <img draggable="false" class="w-full h-[160px] mb-4 lg:h-[200px] xl:h-64" src="https://firebasestorage.googleapis.com/v0/b/yale-school-of-art.appspot.com/o/noticias%2Fnoticia_1.jpg?alt=media&token=c2e08142-77e5-426d-a457-b291740a7d49" alt="Noticia">
-                    <h1 class="text-base font-semibold md:text-xl">Visita la galeria de Arte ubicada dentro de la Universidad</h1>
+                    <h1 class="pr-6 text-base font-semibold md:pr-0 md:text-xl">Visita la galeria de Arte ubicada dentro de la Universidad</h1>
                 </div>
                 
                 <!-- Noticia -->
