--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -9,8 +9,8 @@
                 </a>
                 <a class="w-2/3 max-w-[200px] text-xl text-white font-bold sm:text-2xl sm:max-w-[250px] md:text-3xl xl:max-w-full xl:text-4xl" href="">Yale School of Art</a>
             </div>
-            <img class="h-6 w-6 md:mr-4 xl:hidden active:animate-shrink" src="../../assets/hamburger.svg" alt="Menu" *ngIf="!menuMovil" (click)="menuMovil = !menuMovil">
-            <img class="h-6 w-6 md:mr-4 xl:hidden active:animate-shrink" src="../../assets/x-close.svg" alt="Menu" *ngIf="menuMovil" (click)="menuMovil = !menuMovil">
+            <img class="h-6 w-6 md:mr-4 lg:mr-14 xl:hidden active:animate-shrink" src="../../assets/hamburger.svg" alt="Menu" *ngIf="!menuMovil" (click)="menuMovil = !menuMovil">
+            <img class="h-6 w-6 md:mr-4 lg:mr-14 xl:hidden active:animate-shrink" src="../../assets/x-close.svg" alt="Menu" *ngIf="menuMovil" (click)="menuMovil = !menuMovil">
         </div>
     
     
@@ -38,7 +38,7 @@
         
         <!-- Descripcion -->
         <div class="px-10 md:px-14 md:my-2 lg:px-32 xl:px-[11.5rem]">
-            <h1 class="text-xl pt-4 pb-2 font-bold text-savoyBlue sm:text-3xl md:pt-4 md:pb-0">404. PAGE NOT FOUND</h1>
+            <h1 class="text-xl pt-4 pb-2 font-bold text-savoyBlue sm:text-3xl md:pt-4 md:pb-0">ERROR 404. PAGE NOT FOUND</h1>
             <h1 class="sm:my-4 md:text-xl xl:text-2xl">
                 Página en desarrollo
             </h1>
