Implementacion de base de datos y autenticacion de usuario para componente Foro

--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -15,10 +15,10 @@
     <!-- Contenedor de links -->
     <div class="w-2/3 hidden px-40 gap-16 justify-end items-center text-lg text-white font-semibold xl:text-xl xl:flex xl:px-48 xl:gap-24" >
         <a href="" class="hover:text-darkYellow">Inicio</a>
-        <a href="about" class="text-center hover:text-darkYellow">Sobre Nosotros</a>
-        <a href="#carreras" class="hover:text-darkYellow">Carreras</a>
-        <a href="foro" class="hover:text-darkYellow">Foro</a>
-        <a href="contacto" class="hover:text-darkYellow">Contacto</a>
+        <a href="about" class="text-center hover:text-darkYellow transition-all">Sobre Nosotros</a>
+        <a href="#carreras" class="hover:text-darkYellow transition-all">Carreras</a>
+        <a href="foro" class="hover:text-darkYellow transition-all">Foro</a>
+        <a href="contacto" class="hover:text-darkYellow transition-all">Contacto</a>
     </div>
 </header>
 
