--- a/src/styles.css
+++ b/src/styles.css
@@ -35,7 +35,7 @@ a {
     transform: translate(-50%, -50%);
   }
   .toast-top-center {
-    top: 0;
+    top: 20px;
     right: 0;
     width: 100%;
   }
@@ -131,7 +131,7 @@ a {
     background-position: 15px center;
     background-repeat: no-repeat;
     background-size: 24px;
-    box-shadow: 0 0 12px #999999;
+    /* box-shadow: 0 0 12px #525252; */
     color: #FFFFFF;
   }
   .toast-container .ngx-toastr:hover {
