Arreglo en tamaño de imagenes. Pendiente realizar mas pruebas

--- a/src/app/componentes/foro/foro.component.html
+++ b/src/app/componentes/foro/foro.component.html
@@ -56,9 +56,9 @@
                 </div>
 
                 <!-- Contenedor Imagen y Descripcion -->
-                <div class="flex flex-col lg:flex-row lg:gap-6 lg:grow">
-                    <div class="w-full max-h-[385px] flex justify-center bg-black lg:my-2 lg:w-1/2">
-                        <img src="{{ publicacion.url }}" alt="Publicacion" draggable="false">
+                <div class="flex flex-col py-4 lg:flex-row lg:gap-6 lg:grow">
+                    <div class="w-full flex justify-center bg-black/10">
+                        <img class="h-full max-h-[560px] md:w-[560px] xl:max-w-[480px] xl:min-h-[200px]" src="{{ publicacion.url }}" alt="Imagen" draggable="false">
                     </div>
                     <div class="flex flex-col my-2 lg:w-1/2 lg:justify-between lg:pt-1">
                         <div class="lg:pr-16">
