Implementacion de componente perfil y funciones de eliminado de posts

--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -7,7 +7,7 @@
         <!-- Contenido -->
         <div class="h-full flex flex-col-reverse md:flex-row">
             <!-- Formulario -->
-            <form class="w-full px-10 py-4 my-4 flex flex-col md:justify-center md:py-0 lg:w-2/3 lg:px-32 xl:px-44" action="" [formGroup]="loginForm">
+            <form class="w-full h-full px-10 py-4 my-4 flex flex-col md:justify-center md:py-0 lg:w-2/3 lg:px-32 xl:px-44" action="" [formGroup]="loginForm">
                 <h1 class="mb-2 text-4xl text-savoyBlue font-bold">LOGIN</h1>
                 
                 <!-- Input correo -->
