--- a/src/app/componentes/foro/foro.component.html
+++ b/src/app/componentes/foro/foro.component.html
@@ -5,11 +5,11 @@
     <!-- Contenido -->
     <div class="h-full animate-load">
         <!-- Subheader -->
-        <header class="px-6 py-4 bg-black/10 md:pl-14 lg:pl-32 xl:px-44 xl:py-6">
+        <header class="px-6 py-4 bg-black/10 md:pl-14 lg:pl-32 xl:pl-44 xl:pr-28 xl:py-6">
             <!-- Header sin usuario loggeado -->
             <div class="w-full px-3 flex items-center justify-between md:px-1" *ngIf="!user">
                 <h1 class="w-full pr-4 text-sm text-davysGray/70 font-semibold md:text-base lg:text-lg">Inicia sesión para compartir tus proyectos</h1>
-                <img class="h-5 w-5 md:hidden" src="../../assets/user.svg" alt="Login" routerLink="/login">
+                <img class="h-5 w-5 md:hidden" src="../../assets/login-icon.svg" alt="Login" routerLink="/login">
                 <button class="hidden h-fit w-fit ml-2 py-1 rounded-full text-white font-bold bg-indigo md:block md:mr-4 md:px-6 md:text-lg md:h-10 md:ml-0 xl:text-lg xl:w-28 xl:mr-0 hover:text-darkYellow hover:text-xl active:animate-shrink transition-all" routerLink="/login">Login</button>
             </div>
 
@@ -17,22 +17,22 @@
             <div class="px-3 flex items-center md:px-1" *ngIf="user">
                 <div class="w-full flex items-center justify-between" *ngIf="user">
                     <h1 class="text-sm text-davysGray/70 font-semibold md:text-base xl:text-lg" >Bienvenido {{ user }}</h1>
-                    <div class="flex gap-6">
-                        <img class="h-5 w-5 md:mr-10 md:hidden active:animate-shrink" src="../../assets/add-icon.svg" alt="Publicar" routerLink="/publicar">                
-                        <img class="h-5 w-5 md:mr-10 md:hidden active:animate-shrink" src="../../assets/login-icon.svg" alt="Logout" (click)="logout()">
+                    <div class="flex gap-4">
+                        <button class="py-1 text-savoyBlue items-center gap-6 lg:border-2 lg:border-solid lg:border-savoyBlue rounded-full lg:px-4 xl:px-6 lg:hover:bg-savoyBlue hover:text-white active:animate-shrink lg:flex" routerLink="/publicar">
+                            <h1 class="hidden font-bold lg:block md:px-6 lg:px-4 xl:text-lg">Publicar</h1>    
+                            <img class="h-7 w-7 md:w-8 md:h-8 lg:hidden active:animate-shrink" src="../../../assets/add-icon.svg" alt="Publicar">
+                        </button>
+
+                        <button class="px-2 py-1 text-savoyBlue flex items-center gap-6 lg:border-2 lg:border-solid lg:border-savoyBlue rounded-full lg:px-4 xl:px-6 lg:hover:bg-savoyBlue hover:text-white active:animate-shrink" routerLink="/perfil">
+                            <h1 class="hidden font-bold lg:block md:px-7 lg:px-8 xl:text-lg xl:px-6">Perfil</h1>    
+                            <img class="h-5 w-5 cursor-pointer md:h-6 md:w-6 md:mr-8 active:animate-shrink lg:hidden" src="../../assets/user-icon.svg" alt="Perfil">
+                        </button>
+
+                        <button class="hidden px-2 py-1 text-[#ce0d0d] lg:flex items-center gap-6 md:border-2 md:mr-10 md:border-solid md:border-[#ce0d0d] rounded-full lg:px-4 md:hover:bg-[#ce0d0d] hover:text-white active:animate-shrink">
+                            <h1 class="font-bold xl:text-lg" (click)="logout()">Cerrar sesion</h1>
+                        </button>
                     </div>
                 </div>
-    
-                <div class="hidden w-full px-4 grow justify-end gap-4 md:flex">
-                    <!-- Boton publicar -->
-                    <button class="hidden h-fit w-fit ml-2 py-1 rounded-full text-white font-bold bg-indigo md:block md:px-6 md:text-lg md:h-10 md:ml-0 xl:text-lg xl:w-32 hover:text-darkYellow hover:text-xl active:animate-shrink transition-all" routerLink="/publicar">Publicar</button>
-                    
-                    <!-- Boton logout -->
-                    <button class="hidden h-fit w-fit ml-2 py-1 rounded-full text-white font-bold bg-indigo md:block md:px-6 md:text-lg md:h-10 md:ml-0 xl:text-lg xl:w-32 hover:text-darkYellow hover:text-xl active:animate-shrink transition-all" (click)="logout()">Logout</button>
-                </div>
-
-                <!-- Boton getUser -->
-                <!-- <button class="hidden h-fit w-fit ml-2 px-4 py-1 rounded-full text-sm justify-self-end text-white font-bold bg-indigo md:block md:ml-0 md:h-8 xl:h-10 xl:text-lg hover:text-darkYellow hover:text-xl active:animate-shrink" (click)="getUser()">Get User</button> -->
             </div>
 
         </header>
@@ -43,7 +43,7 @@
             <div *ngFor="let publicacion of publicaciones" class="max-w-[320px] px-6 flex flex-col bg-white md:max-w-[520px] lg:max-w-[1052px] lg:w-full lg:min-h-[300px] lg:py-2 lg:justify-center">
 
                 <!-- Datos publicacion (movil) -->
-                <div class="w-full py-4 text-sm flex lg:hidden">
+                <div class="w-full pt-4 text-sm flex lg:hidden">
                     <div class="w-2/3 flex flex-col">
                         <h1 class="font-semibold lg:text-base">{{ publicacion.autor }}</h1>
                         <h1>{{ publicacion.fecha }}</h1>
@@ -56,12 +56,12 @@
                 </div>
 
                 <!-- Contenedor Imagen y Descripcion -->
-                <div class="flex flex-col py-4 lg:flex-row lg:gap-6 lg:grow">
+                <div class="flex flex-col py-2 lg:flex-row lg:gap-6 lg:grow">
                     <div class="w-full flex justify-center bg-black/10">
                         <img class="h-full max-h-[560px] md:w-[560px] xl:max-w-[480px] xl:min-h-[200px]" src="{{ publicacion.url }}" alt="Imagen" draggable="false">
                     </div>
-                    <div class="flex flex-col my-2 lg:w-1/2 lg:justify-between lg:pt-1">
-                        <div class="lg:pr-16">
+                    <div class="flex flex-col mt-2 lg:w-1/2 lg:justify-between lg:pt-1">
+                        <div class="">
                             <h1 class="font-semibold lg:text-xl">{{ publicacion.titulo }}</h1>
                             <h1 class="text-sm my-1 max-h-[80px] overflow-y-auto md:mb-2 lg:max-h-[280px] lg:my-1 lg:text-lg">                           
                                 {{ publicacion.descripcion }}
@@ -69,7 +69,7 @@
                         </div>
 
                         <!-- Datos publicacion (pantallas grandes) -->
-                        <div class="hidden relative h-12 w-full text-sm gap-1 lg:flex">
+                        <div class="hidden relative h-full w-full text-sm gap-1 lg:flex lg:items-end">
                             <div class="w-2/3 flex flex-col">
                                 <h1 class="font-semibold lg:text-base">{{ publicacion.autor }}</h1>
                                 <h1>{{ publicacion.fecha }}</h1>
@@ -88,7 +88,7 @@
 
         <!-- Mensaje si no hay publicaciones -->
         <div class="w-full h-full flex items-center justify-center px-8 lg:px-32 xl:px-48" *ngIf="publicaciones.length === 0">
-            <h1 class="mb-20 text-lg text-black/20 font-semibold md:text-xl">No se encontraron publicaciones en el foro</h1>
+            <h1 class="mb-20 text-lg text-black/20 font-semibold md:text-xl xl:text-2xl">No se encontraron publicaciones en el foro</h1>
         </div>
     </div>
 
