--- a/src/app/componentes/not-found/not-found.component.html
+++ b/src/app/componentes/not-found/not-found.component.html
@@ -8,7 +8,7 @@
         <div class="px-10 md:px-14 md:my-2 lg:px-32 xl:px-[11.5rem]">
             <h1 class="text-xl pt-4 pb-2 font-bold text-savoyBlue sm:text-3xl md:pt-4 md:pb-0">ERROR 404. PAGE NOT FOUND</h1>
             <h1 class="sm:my-4 md:text-xl xl:text-2xl">
-                Página en desarrollo
+                Página no encontrada
             </h1>
         </div>
     </div>
