--- a/src/app/componentes/perfil/perfil.component.html
+++ b/src/app/componentes/perfil/perfil.component.html
@@ -27,7 +27,7 @@
 
 
         <!-- Publicaciones del usuario -->
-        <div class="relative z-0 flex flex-col items-center gap-4 px-8 md:px-16 lg:px-32 xl:px-48" *ngIf="publicacionesUsuario.length > 0">
+        <div class="relative z-0 flex flex-col items-center gap-4 px-8 pb-6 md:px-16 lg:px-32 xl:px-48" *ngIf="publicacionesUsuario.length > 0">
             <div class="w-full flex flex-col gap-2 my-2">
                 <h1 class="text-savoyBlue text-lg font-bold self-start md:text-2xl">Tus publicaciones</h1>
                 <div class="w-full border-t border-solid border-savoyBlue"></div>
